--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,11 @@
 			<artifactId>dotenv-java</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.24</version> <!-- Usa la versión más reciente -->
+			<version>1.18.30</version>
 			<scope>provided</scope>
 		</dependency>
 
